# ai_content_app

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: README.md  pyproject.toml
desktop_wrapper/: README.md
frontend/: .gitignore  README.md  package.json
